fix eliminate after wrap

--- a/tb.css
+++ b/tb.css
@@ -616,6 +616,7 @@
 	font-weight: 300;
 	padding: 10px;
 	display: none;
+	z-index: 100;
 }
 
 .tip-popup:hover {
